[gd_scene load_steps=3 format=1]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://assets/music/04. Matrix Fight.ogg" type="AudioStream" id=2]

[node name="szeneRoot" type="Node"]

script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 74.0
margin/top = 8.0
margin/right = 412.0
margin/bottom = 48.0

[node name="Label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 146.0
margin/top = 14.0
margin/right = 186.0
margin/bottom = 28.0
text = "MENU"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VButtonArray" type="VButtonArray" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 74.0
margin/top = 60.0
margin/right = 411.0
margin/bottom = 104.0
flat = false
button/count = 3
button/min_button_size = -1.0
button/align = 0
button/0/text = "Spiel starten"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "Spiel schlie√üen"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "Zur Physik Demo"
button/2/tooltip = ""
button/2/icon = null
button/selected = 0

[node name="BackgroundMusic" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 2 )
stream/play = true
stream/loop = false
stream/volume_db = 6.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="bMusic" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 177.0
margin/top = 233.0
margin/right = 306.0
margin/bottom = 253.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Gedudel abstellen"
flat = false

[connection signal="button_selected" from="VButtonArray" to="." method="_on_VButtonArray_button_selected"]

[connection signal="toggled" from="bMusic" to="." method="_on_bMusic_toggled"]


